<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5555"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_name"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_raсe_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:labelFor="@id/spinner_race"
                    android:text="@string/Race"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_race"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_weapon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/rg_rerson_classes"
                android:text="@string/Specialization"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_rerson_classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_params_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFFF"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_parameters_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:labelFor="@id/spinner_race"
                    android:text="@string/attributes"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_available_points"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_perks_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#FFFF"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_perks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/spinner_race"
                android:text="@string/perks"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>




    </LinearLayout>

</ScrollView>